src/ecommerce/components/navigation/footer/_ecoFooter.scss
@use '../../../scss/ecommerceStyles' as m;
@use '../../../../sass/functions' as f;

.eFooter {
  position: relative;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(3, auto);
  padding: calc(f.rem(50) + f.rem(32)) 8.335% f.rem(50) 8.335%;
  border-top-right-radius: f.rem(30);
  border-top-left-radius: f.rem(30);
  margin-top: f.rem(-32);
  background-color: var(--elemBackgroundSecondary);
  background: radial-gradient(circle, rgba(13, 18, 26, 1) 0%, rgba(20, 26, 37, 1) 100%);
  @media (width <= 950px) {
    display: flex;
    flex-direction: column;
    gap: f.rem(35);
    padding: f.rem(74) 8.335%;
  }
  &__partners {
    grid-column: span 3;
  }
  &__customer {
    grid-column: span 3;
    padding: f.rem(50);
    position: relative;
    display: flex;
    align-items: center;
    gap: f.rem(50);
    @media (width <= 1020px) {
      display: flex;
      flex-direction: column;
      align-items: center;
      padding: f.rem(25) 0 0 0;
    }
  }
  &__additions {
    grid-column: span 3;
    display: flex;
    gap: f.rem(30);
    width: 100%;
    padding: f.rem(50);
    @media (width <= 1600px) {
      flex-direction: column;
    }
    @media (width <= 1020px) {
      padding: f.rem(75) 0 0 0;
    }
    @media (width <= 950px) {
      justify-content: center;
      padding: 0;
    }
    @media (width <= 660px) {
      display: flex;
      flex-direction: column;
      gap: f.rem(20);
    }
    &__paymentTypes {
      @media (width <= 1600px) {
        justify-content: center;
      }
    }
  }
}

.eFooter__splitter {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: f.rem(25);
  width: 100%;
  padding-bottom: f.rem(25);
  &__line {
    display: block;
    width: 100%;
    height: 1px;
    background-color: var(--fontAccent);
    flex-grow: 1;
  }
  & h2 {
    display: block;
    flex-basis: 1;
    margin-bottom: 0;
    color: var(--fontAccent);
    font-size: f.rem(14);
    font-weight: 700;
    text-align: center;
    white-space: nowrap;
    text-transform: uppercase;
    letter-spacing: f.rem(2);
  }
}

